<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/conver_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/convert"
                android:textSize="@dimen/currency_text_size" />

            <TextView
                android:id="@+id/from_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingEnd="@dimen/padding_16dp"
                android:text="@string/currency_from"
                android:textSize="@dimen/currency_text_size" />

            <TextView
                android:id="@+id/to_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingEnd="@dimen/padding_16dp"
                android:text="@string/currency_to"
                android:textSize="@dimen/currency_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sum_til"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/sum_to_convert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/sum"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/colorAccent" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/spinner_from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/spinner_bottom_margin"
                android:layout_weight="1"
                android:spinnerMode="dialog" />

            <Spinner
                android:id="@+id/spinner_to"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/spinner_bottom_margin"
                android:layout_weight="1"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_24dp"
            android:layout_marginBottom="@dimen/margin_24dp">

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <Button
                android:id="@+id/convert_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/buttonColor"
                android:paddingStart="@dimen/margin_24dp"
                android:paddingEnd="@dimen/margin_24dp"
                android:text="@string/convert_button"
                android:textSize="@dimen/currency_text_size" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/exchange_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/rate"
                android:textSize="@dimen/results_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/exchange_rate_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingStart="@dimen/padding_8dp"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/results_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/result_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/result"
                android:textSize="@dimen/results_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/result_amount_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingStart="@dimen/padding_8dp"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/results_text_size" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>